# doclang

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  README.md  iso-standard-v2.md  iso-standard.md  pyproject.toml  spec.md
.github/workflows/: ci.yml
doclang/: README.md  __init__.py  _schemas.py  cli.py  doclang.sch  doclang.xsd  schematron_validation.py  utils.py  validation.py  version.py  xsd_validation.py
docling_iso/: grammar.lark  parser.py  write_iso_draft.py
examples/abbyy/: 1040ScheduleC_2.tif  ACORD 125_2.tif  BCR_CJK_1.tif  Credit Bureau Report_2.tif  Form 1099Composite_1.tif  Form8949_2.tif  Receipt_5.tif  Receipt_6.tif  Receipt_7.tif  Sea Waybill_1.tif  Sea Waybill_2.tif  Sick Note_1.tif  Sick Note_2.tif  W-8BEN-E_1.tif  W-8BEN-E_2.tif  W-8BEN_1.tif  W-8BEN_2.tif  W-8BEN_3.tif  W-8BEN_4.tif  W-8BEN_5.tif  W-8ECI_1.tif  W-8ECI_2.tif  W-8EXP_1.tif  W-8EXP_2.tif  W-8EXP_3.tif  W-8IMY_1.tif  W-8IMY_2.tif
examples/cross_page/: index.md
examples/form/: form-examples.md
examples/inline/: inline-examples.md
examples/split_tables/: index.md
form-examples/: form-examples.md
grammar/: grammar.ipynb
iso-standards/: ISO_standard_headers.docx
legacy/: iso-standard-v2.md
reference/input/: reference.xlsx
reference/input/examples/: doclang.dclg.xml  page_break.dclg.xml  thread.dclg.xml
reference/output/: reference.md
resources/: doctags.drawio  original_table.xlsx  split_tables.pptx
resources/schema/: doclang.xsd  test_input.xml  validate.py
test/: test_parser.py
test/data/: test_data.md  test_data.yaml
tests/: test_cli.py  test_export.py  test_markdown_snippets.py  test_validation.py
tests/data/invalid/: hyperlink_invalid.dclg.xml  nok_br_element.dclg.xml  nok_caption_in_body.dclg.xml  nok_caption_in_doclang.dclg.xml  nok_code_class_attribute.dclg.xml  nok_href_in_body.dclg.xml  (+49 more)
utils/: export_docx.py  generate_reference.py  prepare_release.py  sync_version.py  validate_markdown_snippets.py  write_iso_draft.py
(+48 files in other folders)
