[project]
name = "doctags-iso"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "lark>=1.3.0",
]

[dependency-groups]
dev = [
    "pre-commit~=3.7",
    "pydantic>=2.11.10",
    "pyyaml>=6.0.3",
    "pytest~=8.3",
]

[tool.setuptools.packages.find]
include = ["docling_iso*"]
