[build-system]
requires = ["setuptools>=80", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "doclang"
dynamic = ["version"]
description = "DocLang specification and reference validator (XSD, Schematron, CLI)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "lxml>=6.0.2",
    "saxonche>=12.9.0",
    "typer>=0.15.1",
    "rich>=13.9.4",
]

[project.scripts]
doclang = "doclang.cli:app"

[tool.setuptools.package-data]
doclang = ["*.xsd", "*.sch"]

[dependency-groups]
dev = [
    "pre-commit~=3.7",
    "pydantic>=2.11.10",
    "pyyaml>=6.0.3",
    "pytest~=8.3",
    "openpyxl>=3.1.0",
    "python-docx>=1.2.0",
    "docling>=2.0.0",
]

[tool.uv]
package = true

[tool.setuptools.packages.find]
include = ["doclang*"]

[tool.setuptools_scm]
# On tag vX.Y.Z → X.Y.Z; commits after tag → X.Y.Z+g<short_sha>
version_scheme = "only-version"
